--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -1,6 +1,6 @@
 name: php55
 version: 0.0.16
-inherits: wercker/ubuntu12.04-webessentials
+inherits: wercker/ubuntu12.04-webessentials@1.0.2
 type: main
 platform: ubuntu@12.04
 description: wercker box for php 5.5
