--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -1,68 +1,38 @@
 name: php55
-version: 0.0.16
-inherits: wercker/ubuntu12.04-webessentials@1.0.2
+version: 0.0.19
+inherits: ruudk/ubuntu14.04@1.0.0
 type: main
-platform: ubuntu@12.04
+platform: ubuntu@14.04
 description: wercker box for php 5.5
 keywords:
   - php
-  - php5
+  - php55
   - postgresql
   - laravel
 packages:
   - php@5.5
+  - composer
 script: |
-  
+
+  # Update
+  sudo apt-get update
+
+  # Install base packages
+  # sudo apt-get install -y curl wget unzip git-core ack-grep
+
   # Edit environment path
   echo 'export PATH="/usr/local/bin:$PATH"' >> $HOME/.bash_profile
 
-  # Install php
-  sudo add-apt-repository ppa:ondrej/php5 -y
-  sudo apt-get update -y
-  sudo apt-get install php5 php5-common php5-dev php-pear php5-curl php5-gd php5-cli php5-apcu php5-mcrypt php5-intl php5-xdebug php5-pgsql libicu-dev php5-redis libsasl2-dev -y
+  sudo add-apt-repository -y ppa:ondrej/php5
 
-  # Configure PHP
-  sudo sed -i 's+;date.timezone =+date.timezone = Europe/Rome +g' /etc/php5/cli/php.ini
-  sudo sed -i 's/128M/8096M/' /etc/php5/cli/php.ini
-  sudo sed -i 's/disable_functions/;disable_functions/' /etc/php5/cli/php.ini
+  sudo apt-key update
+  sudo apt-get update
 
-  # Configure PEAR
-  pear config-set php_ini /etc/php5/cli/php.ini
-  pecl config-set php_ini /etc/php5/cli/php.ini
+  # Install PHP
+  sudo apt-get install --force-yes -y php5-cli php5-fpm php5-mysql php5-pgsql php5-sqlite php5-curl php5-gd php5-gmp php5-mcrypt php5-xdebug php5-memcached php5-imagick php5-intl
 
-  # Install PHP extensions
-  # echo '\n' | sudo pecl install -f mongo-1.4.5
-
-  # Install composer
+  # Install Composer
   curl -sS https://getcomposer.org/installer | php
   sudo mv composer.phar /usr/local/bin/composer
-  sudo chmod +x /usr/local/bin/composer
-  mkdir $WERCKER_CACHE_DIR/composer || echo "Composer cache directory exists"
-  composer config --global cache-dir $WERCKER_CACHE_DIR/composer
 
-  # Install PHPUnit
-  wget https://phar.phpunit.de/phpunit.phar
-  sudo mv phpunit.phar /usr/local/bin/phpunit
-  sudo chmod +x /usr/local/bin/phpunit
-
-  # Install atoum
-  # wget http://downloads.atoum.org/nightly/mageekguy.atoum.phar
-  # chmod +x mageekguy.atoum.phar
-  # sudo mv mageekguy.atoum.phar /usr/local/bin/atoum
-  # sudo chmod +x /usr/local/bin/atoum
-
-  # Update node
-  # echo '\n' | sudo add-apt-repository ppa:chris-lea/node.js
-  # sudo apt-get update
-  # sudo apt-get install nodejs
-
-  # Install bower
-  # sudo npm install -g bower
-
-  # Install capifony
-  # sudo gem install capifony
-
-  # Install s3cmd
-  # wget -O- -q http://s3tools.org/repo/deb-all/stable/s3tools.key | sudo apt-key add -
-  # sudo wget -O/etc/apt/sources.list.d/s3tools.list http://s3tools.org/repo/deb-all/stable/s3tools.list
-  # sudo apt-get update && sudo apt-get install s3cmd
+  sudo composer self-update
