--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -18,7 +18,11 @@ script: |
   sudo apt-get update
 
   # Install base packages
-  # sudo apt-get install -y curl wget unzip git-core ack-grep
+  sudo apt-get install -y curl wget unzip ack-grep
+  sudo apt-get install software-properties-common
+  sudo apt-get install apt-file && apt-file update
+
+  sudo apt-get update
 
   # Edit environment path
   echo 'export PATH="/usr/local/bin:$PATH"' >> $HOME/.bash_profile
