--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -41,4 +41,4 @@ script: |
 
   sudo composer self-update
 
-  composer global require 'phpunit/phpunit=4.2.*'
+  sudo composer global require 'phpunit/phpunit=4.2.*'
